# wasm_runtime_evaluation

./: README.md
benchmark_wasm/: CMakeLists.txt
benchmark_wasm/src/: benchmark.cpp
wamr_test/: CMakeLists.txt
wamr_test/src/: wamr_aot_runner.c  wamr_aot_runner.cpp  wamr_runner.cpp
wasmedge_test/: CMakeLists.txt
wasmedge_test/src/: wasmedge_aot_runner.c  wasmedge_aot_runner.cpp  wasmedge_runner.cpp
wasmtime_test/: CMakeLists.txt
wasmtime_test/src/: wasmtime_aot_runner.c  wasmtime_aot_runner.cpp  wasmtime_runner.cpp
